[gd_scene load_steps=14 format=3 uid="uid://cts22dp3q7qgt"]

[ext_resource type="Script" path="res://Scripts/enemyTwo.gd" id="1_nlr8y"]
[ext_resource type="Texture2D" uid="uid://cii22mwe084x8" path="res://Assets/vacaroxa--generic-run-n-gun-pack--v.1.0/Enemies/ARMob.png" id="2_rafdr"]

[sub_resource type="AtlasTexture" id="AtlasTexture_x8yqy"]
atlas = ExtResource("2_rafdr")
region = Rect2(352, 0, 32, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_4nhwe"]
atlas = ExtResource("2_rafdr")
region = Rect2(384, 0, 32, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_48n8i"]
atlas = ExtResource("2_rafdr")
region = Rect2(416, 0, 32, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_vdamf"]
atlas = ExtResource("2_rafdr")
region = Rect2(448, 0, 32, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_5430w"]
atlas = ExtResource("2_rafdr")
region = Rect2(480, 0, 32, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_yc5fj"]
atlas = ExtResource("2_rafdr")
region = Rect2(512, 0, 32, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_mlvkp"]
atlas = ExtResource("2_rafdr")
region = Rect2(544, 0, 32, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_ffaw1"]
atlas = ExtResource("2_rafdr")
region = Rect2(576, 0, 32, 38)

[sub_resource type="SpriteFrames" id="SpriteFrames_ca6m7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x8yqy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4nhwe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_48n8i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vdamf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5430w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yc5fj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mlvkp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ffaw1")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_smr3a"]
size = Vector2(12, 27.75)

[sub_resource type="CircleShape2D" id="CircleShape2D_hpv6i"]
radius = 159.013

[node name="Enemy2" type="CharacterBody2D"]
scale = Vector2(4, 4)
script = ExtResource("1_nlr8y")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_ca6m7")
animation = &"walk"
autoplay = "walk"
frame_progress = 0.851816
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 5.125)
shape = SubResource("RectangleShape2D_smr3a")

[node name="Detection" type="Area2D" parent="."]

[node name="Detection" type="CollisionShape2D" parent="Detection"]
shape = SubResource("CircleShape2D_hpv6i")

[node name="SpawnPosition1" type="Marker2D" parent="."]
position = Vector2(-10.25, 0)

[node name="ShootSpeed" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="Despawner" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="body_entered" from="Detection" to="." method="_on_detection_body_entered"]
[connection signal="timeout" from="ShootSpeed" to="." method="_on_shoot_speed_timeout"]
[connection signal="timeout" from="Despawner" to="." method="_on_despawner_timeout"]
